# subspacer

./: .gitignore  @space.cert.json  Cargo.toml  SUBSD_RPC.md  chain.json  inner@space.req.json  outer@space.req.json  root@space.cert.json  root@space.req.json  setup-subsd-env.sh  test@space.cert.json  test@space.req.json
data/keystores/: keystore_1759783299733.json  keystore_1762360949561.json  keystore_1766092603632.json
data/spaces/: README.md  init_space
data/spaces/bitcoin/: @bitcoin.cert.json  admin@bitcoin.cert.json  admin@bitcoin.req.json  andrew@bitcoin.cert.json  chain.json  user@bitcoin.cert.json  user@bitcoin.req.json
data/spaces/did/: @did.cert.json  admin@did.cert.json  admin@did.req.json  chain.json  none@did-1764861905318.json  none@did.cert.json  none@did.req.json  some@did.cert.json  some@did.req.json  user@did.cert.json  user@did.req.json
data/spaces/nomad/: @nomad.cert.json  admin@nomad.cert.json  admin@nomad.req.json  chain.json  generation@nomad.req.json  user@nomad.cert.json  user@nomad.req.json  wandering@nomad.req.json
data/spaces/nostrops/: @nostrops.cert.json  admin@nostrops.cert.json  admin@nostrops.req.json  chain.json  everything@nostrops-1764018423331.json  keystore_1763914500857.json  nacho_brave_ks.json  nacho_ks.json  nothing@nostrops-1763940094697.json  nothing@nostrops.cert.json  nothing@nostrops.req.json  opal@nostrops.req.json  opstrich@nostrops.req.json  something@nostrops-1763912700237.json  something@nostrops.cert.json  something@nostrops.hex  something@nostrops.req.json  something@nostrops.reqb.json  user@nostrops.cert.json  user@nostrops.req.json  vacuum@nostrops.cert.json  vacuum@nostrops.req.json
data/spaces/pubkey/: @pubkey.cert.json  admin@pubkey.cert.json  admin@pubkey.req.json  chain.json  nothing@pubkey.cert.json  nothing@pubkey.req.json  some@pubkey.cert.json  some@pubkey.req.json  something@pubkey.cert.json  something@pubkey.req.json  thing@pubkey.cert.json  thing@pubkey.req.json  user@pubkey.cert.json  user@pubkey.req.json  what@pubkey.cert.json  what@pubkey.req.json
data/spaces/space/: @space.cert.json  admin@space.cert.json  admin@space.req.json  chain.json  expansive@space.cert.json  expansive@space.req.json  hyper@space.cert.json  hyper@space.req.json  hyper_nostr.json  hyper_nostr_signed.json  outer@space.req.json  quantum@space.cert.json  quantum@space.req.json  (+4 more)
data/spacesd/: init_space.sh
inbox/: dude@tabconf.req.json  inner@space.req.json
program/: Cargo.toml
subs/: Cargo.toml
subs/src/: app.rs  lib.rs
subsd/: Cargo.toml
subsd/src/: main.rs
(+70 files in other folders)
